# LatinScansion

./: CMakeLists.txt  LatinScansion.cpp  LatinScansion.h  LatinScansionDriver.cpp  README.md
public/: LatinScansion.h
src/: LatinScansion.cpp  LatinScansionDriver.cpp
